--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@
   height: 8rem;
   margin: 1rem;
   position: relative;
+  cursor: pointer;
 }
 
 .apple {
@@ -232,12 +233,52 @@
 
 table {
   border: 1px solid black;
+  width: 100%;
+  height: 100%;
+  
+  cursor: default;
+}
+
+.changeSize{
+   animation-duration: 3s;
+  animation-name: slidein;
+  animation-iteration-count: infinite;
+  cursor: default;
+}
+
+.itemApple{
+transform:scale(0.5);
+animation-duration: 3s;
+animation-name: slidein;
+cursor: default;
+}
+
+.itemApple:after {
+   
+}
+.itemApple:before {
+    
 }
 
 
 
-
-.matriz {
-  margin: auto;
+.matrizApple {
+  position: absolute;
+  z-index: 5;
+  margin: 70px 0 0 70px;
+  width: 500px;
+  height: 500px;
+  border: 1px solid black;
+  transform:rotate(25deg);
 }
 /* */
+
+.matrizOrange {
+  position: absolute;
+  z-index: 8;
+  margin: 156px 20px 0 70px;
+  width: 500px;
+  height: 500px;
+  border: 1px solid black;
+  transform:rotate(264deg);
+}
